# CrossSim

./: LICENSE  README.md  SETUP.md  check_dependencies.py  context.md  launch_simple_editor.sh  pyproject.toml  test_installation.py  test_save_functionality.py
crosssim/: __init__.py
crosssim/cli/: __init__.py  main.py
crosssim/core/: __init__.py  agent.py  environment.py  scenario.py
crosssim/gui/: __init__.py  agent_editor.py  main.py  main_window.py  map_editor.py  properties_panel.py  scenario_panel.py  simple_editor.py
